--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,7 +1,38 @@
 ﻿@page "/"
+@using System.IO;
 
-<PageTitle>Home</PageTitle>
+@code{
+    public class FolderModel
+    {
+        public required string FolderName { get; set; }
+        public required List<string> FilePaths { get; set; }
+    }
 
-<h1>Hello, world!</h1>
+    public List<FolderModel> Folders = [];
+    public required List<string> ImageList { get; set; }
 
-Welcome to your new app.
+    protected override void OnInitialized()
+    {
+        string[] imageFolders = Directory.GetDirectories("./wwwroot/img");
+        List<FolderModel> folders = [];
+        foreach (string folderPath in imageFolders)
+        {
+            string folderName = Path.GetFileName(folderPath);
+            string[] filePaths = Directory.GetFiles(folderPath);
+            string[] fileNames = filePaths.Select(path => Path.GetFileName(path)).ToArray();
+            string[] fileDisplayPaths = fileNames.Select(fileName => Path.Join("img", folderName, fileName)).ToArray();
+            folders.Add(new FolderModel
+                {
+                    FolderName = folderName,
+                    FilePaths = fileDisplayPaths.ToList()
+                });
+        }
+        Folders = folders;
+    }
+}
+
+
+@foreach (FolderModel folder in Folders)
+{
+    <ImageGallery Title="@folder.FolderName" List_of_Paths="folder.FilePaths.ToArray()" />
+}
