--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -1,38 +1,38 @@
 ﻿@page "/"
 @using System.IO;
+@using Newtonsoft.Json;
+@inject HttpClient Http
 
 @code{
-    public class FolderModel
+    public class ImageAsset
     {
-        public required string FolderName { get; set; }
-        public required List<string> FilePaths { get; set; }
+        public required string path;
+        public required string alt;
     }
 
-    public List<FolderModel> Folders = [];
+    public class ImageDirectory
+    {
+        public required string name;
+        public required ImageAsset[] images;
+
+        public string[] FilePaths {
+            get { return images.Select(asset => Path.Join("img", name, asset.path)).ToArray(); }
+        }
+    }
+
+    public ImageDirectory[] ImageDirectories = [];
     public required List<string> ImageList { get; set; }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        string[] imageFolders = Directory.GetDirectories("./wwwroot/img");
-        List<FolderModel> folders = [];
-        foreach (string folderPath in imageFolders)
-        {
-            string folderName = Path.GetFileName(folderPath);
-            string[] filePaths = Directory.GetFiles(folderPath);
-            string[] fileNames = filePaths.Select(path => Path.GetFileName(path)).ToArray();
-            string[] fileDisplayPaths = fileNames.Select(fileName => Path.Join("img", folderName, fileName)).ToArray();
-            folders.Add(new FolderModel
-                {
-                    FolderName = folderName,
-                    FilePaths = fileDisplayPaths.ToList()
-                });
-        }
-        Folders = folders;
+        string json = await Http.GetStringAsync("img/images.json");
+        ImageDirectories = JsonConvert.DeserializeObject<ImageDirectory[]>(json) ?? [];
     }
 }
 
+<h1>Counters</h1>
 
-@foreach (FolderModel folder in Folders)
+@foreach (ImageDirectory directory in ImageDirectories)
 {
-    <ImageGallery Title="@folder.FolderName" List_of_Paths="folder.FilePaths.ToArray()" />
+    <ImageGallery Title="@directory.name" List_of_Paths="directory.FilePaths" />
 }
