--- a/Pages/ImageGallery.razor
+++ b/Pages/ImageGallery.razor
@@ -1,8 +1,8 @@
 ﻿@page "/gallery"
 
-<div>
+@* <div>
     @Title
-</div>
+</div> *@
 <MudCarousel 
     Class="mud-width-full" 
     Style="height:200px;" 
@@ -34,7 +34,7 @@
     [Parameter]
     public required string Title { get; set; }
     [Parameter]
-    public required Array List_of_Paths { get; set; }
+    public required string[] List_of_Paths { get; set; }
 }
 
 
